tests/type-error/InfiniteType-MutuallyRecursive2.vix
type A = A1 | A2 B
type B = B1 | B2 C
type C = C1 | C2 D
type D = D1 | D2 A
